# weather-app

./: .gitignore  README.md  pyproject.toml
frontend/src/: App.tsx  index.css
weather/: api.py  cli.py  client.py  models.py
